fix: Correct avatar visibility in Header module depending on screen width

--- a/src/modules/header/Header.module.scss
+++ b/src/modules/header/Header.module.scss
@@ -45,3 +45,11 @@
     display: none;
   }
 }
+
+.mobileVisible {
+  display: none;
+
+  @media screen and (max-width: 1023px) {
+    display: block;
+  }
+}
